# gazer

./: .gitignore  README.md  pyproject.toml
gazer/: __main__.py  core_connect.py  core_export.py  core_schema.py  core_sql_build.py  db_connector.py  gazer.tcss  mem_config.py  mem_presets.py  mem_schema.py  memory.py  query_builder.py  schema_inspector.py  sql_builder_screen.py  tui.py  tui_main.py  ui_dropdown.py  ui_error.py  ui_gazer.tcss  ui_main.py  ui_output.py  ui_sql_build.py
mem/: config.json
tests/: test_query_builder.py
