[project]
name = "gazer"
version = "0.1.0"
description = "TUI for database querying"
authors = [
    {name = "danya-zh",email = "dzhumati@purdue.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "textual>=0.47.0,<0.90.0",
    "pandas>=2.0.0,<2.3.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "scipy>=1.10.0,<1.17.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "black>=23.0,<25.0",
]

[project.scripts]
gazer = "gazer.__main__:main"
